--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://drive.google.com/uc?export=view&id=1O8DC0aU9IuWuoQpuwb9nztm58yaszT6R">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Weather App</title>
   </head>
   <body>
     <div id="root"></div>
